--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <main>
 
     <div class="backgroundImag">
         <h1 class="title">BMI</h1>
@@ -105,7 +106,7 @@
 
 </div>
 
-    
+</main>
 
 
     <script src="./main.js"></script>
