--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <main>
 
     <div class="backgroundImag">
-        <h1 class="title">BMI</h1>
+       
     </div>
     <!-- Start navbar  -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light bg-white ">
+    <ninfoParagrafav class="navbar navbar-expand-lg navbar-light bg-light bg-white ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">BMI</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -59,7 +59,7 @@
                 </form>
             </div>
         </div>
-    </nav>
+    </ninfoParagrafav>
     <!-- Ende navbar -->
 
     <!-- inseert Imag -->
